Ventana Iniciar Sesion

--- a/src/app/iniciases/iniciases.component.html
+++ b/src/app/iniciases/iniciases.component.html
@@ -1,1 +1,29 @@
-<p>iniciases works!</p>
+
+<app-navbar></app-navbar>
+<div class="container">
+    <section class="micontenido">
+
+        <h1>Inicia Sesión</h1>
+
+        <div class="entrada">
+            <label>Correo</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+
+        <div class="entrada">
+            <label>Contraseña</label>
+            <input type="password" class="form-control" id="inputPassword">
+        </div>
+
+        <div class="botones">
+            <button class="btn boton1">Iniciar</button>
+            <div class="botones2">
+                <button class="btn boton2">Volvamos a Inicio</button>
+                <button class="btn boton3">¿No tienes cuenta aún?</button>
+            </div>
+        </div>
+
+    </section>
+
+</div>
+
