Interface de Index SIN PRODUCTOS

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,1 +1,8 @@
-<p>Hola Buenos Días</p>
+<app-navbar></app-navbar>
+<section class="banner-image  d-flex align-items-center">
+    <div class="content">
+        <h1>Aisha</h1>
+    </div>
+</section>
+<app-productbar></app-productbar>
+<app-footer></app-footer>
