--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid mimenu">
-        <a class="navbar-brand" href="#">Aisha</a>
+        <a class="navbar-brand" href="">Aisha</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Iniciar Sesion</a>
+                <a class="nav-link" routerLink="iniciar-sesion">Iniciar Sesion</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Registrarse</a>
+                <a class="nav-link" routerLink="registrarse">Registrarse</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Ir al Carrito</a>
+                <a class="nav-link" routerLink="carrito">Ir al Carrito</a>
             </li>
         </ul>
       </div>
