--- a/src/app/iniciases/iniciases.component.html
+++ b/src/app/iniciases/iniciases.component.html
@@ -7,23 +7,24 @@
 
         <div class="entrada">
             <label>Correo</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" name="correo" id="exampleFormControlInput1" placeholder="name@example.com" [(ngModel)]="correo">
         </div>
 
         <div class="entrada">
             <label>Contraseña</label>
-            <input type="password" class="form-control" id="inputPassword">
+            <input type="password" class="form-control" name="contrasena" id="inputPassword" [(ngModel)]="contrasena">
         </div>
 
         <div class="botones">
-            <button class="btn boton1">Iniciar</button>
+            <button class="btn boton1" (click)="iniciar()"  >Iniciar</button>
+            <p>{{mensaje}}</p>
             <div class="botones2">
-                <button class="btn boton2">Volvamos a Inicio</button>
-                <button class="btn boton3">¿No tienes cuenta aún?</button>
+                <a class="btn boton2" href="http://localhost:4200">Volvamos a Inicio</a>
+                <a class="btn boton3" href="http://localhost:4200/registrarse">¿No tienes cuenta aún?</a>
             </div>
         </div>
 
-    </section>
+    </section> 
 
 </div>
 
