--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,13 +3,13 @@
         <a class="navbar-brand" href="">Aisha</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" routerLink="iniciar-sesion">Iniciar Sesion</a>
+                <a class="nav-link" href="http://localhost:4200/iniciar-sesion">Iniciar Sesion</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="registrarse">Registrarse</a>
+                <a class="nav-link" href="http://localhost:4200/registrarse">Registrarse</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="carrito">Ir al Carrito</a>
+                <a class="nav-link" href="http://localhost:4200/carrito">Ir al Carrito</a>
             </li>
         </ul>
       </div>
