--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,6 +11,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="http://localhost:4200/carrito">Ir al Carrito</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link">{{nombreUser}}</a>
+            </li>
         </ul>
       </div>
 </nav>
