Tarjetas de Producto en Index, front terminado.

--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -11,3 +11,13 @@
     color: white;
 }
 
+.container{
+    padding-top: 5rem;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+
