--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -4,5 +4,18 @@
         <h1>Aisha</h1>
     </div>
 </section>
-<app-productbar></app-productbar>
-<app-footer></app-footer>
+
+<div class="container">
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+    <app-product-item></app-product-item>
+</div>
+
+
+<app-footer class="footer"></app-footer>
