Carritos de Compras V1 Front-End terminado.

--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -1,1 +1,16 @@
-<p>carrito works!</p>
+<app-navbar></app-navbar>
+<div class="container">
+    <h1>Tu Carrito</h1>
+    <app-carrito-item></app-carrito-item>
+    <app-carrito-item></app-carrito-item>
+    <app-carrito-item></app-carrito-item>
+    <app-carrito-item></app-carrito-item>
+    <app-carrito-item></app-carrito-item>
+    <hr>
+    <div class="total">
+        <h2>Precio Total</h2>
+        <p>$000,000</p>
+    </div>
+    <button>Confirmar Compra</button>
+</div>
+<app-footer></app-footer>
