--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -1,5 +1,5 @@
 <div class="card" href="http://localhost:4200/iniciar-sesion">
-    <a href="http://localhost:4200/iniciar-sesion">
+    <a href="http://localhost:4200/vistaProducto">
         <img src="https://images.unsplash.com/photo-1605619227865-f8af18dfeab4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" class="card-img-top" alt="...">
         <div class="card-body" >
             <h5 class="card-title">Nombre Producto</h5>
