--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -11,6 +11,6 @@
         <h2>Precio Total</h2>
         <p>$000,000</p>
     </div>
-    <button>Confirmar Compra</button>
+    <button class="btn-1 hbtn"><a href="http://localhost:4200/ticket" class="hbtn">Confirmar Compra</a></button>
 </div>
 <app-footer></app-footer>
