--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,1 +1,39 @@
-<p>ticket works!</p>
+<app-navbar></app-navbar>   
+
+<div class="container">
+    <h1>Ticket de Compra</h1>
+    <div class="contenido">
+        <app-item-ticket></app-item-ticket>
+        
+    </div>
+    <div class="informacion">
+        <hr>
+        <div class="valor">
+            <div class="titulo">Total</div>
+            <div class="dato">$000,000</div>
+        </div>
+        <div class="valor">
+            <div class="titulo">Fecha</div>
+            <div class="dato">00/00/00</div>
+        </div>
+        <div class="valor">
+            <div class="titulo">Hora</div>
+            <div class="dato">00:00:00</div>            
+        </div>
+        <div class="valor">
+            <div class="titulo">Ticket ID</div>
+            <div class="dato">12345432</div>
+        </div>
+    </div>
+
+    <div class="contenido_botones">
+        <div class="botones">
+            <button class="btn-1">Confirmar</button>
+            <button class="btn-2">Cancelar</button>
+        </div>
+    </div>
+
+    <app-footer></app-footer>
+    
+
+</div>
