--- a/src/app/vista-producto/vista-producto.component.html
+++ b/src/app/vista-producto/vista-producto.component.html
@@ -4,8 +4,9 @@
         <div class="sec-izq">
             <img src="https://images.unsplash.com/photo-1605619227865-f8af18dfeab4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" class="card-img-top" alt="...">
             <div class="botones">
-                <button class="btn-1">Lo Compro</button>
-                <button class="btn-2">Añadir a carrito</button>
+               <button class="btn-1 hbtn"><a href="http://localhost:4200/nota" class="hbtn">Comprar</a></button>
+               <button class="btn-2 hbtn">Añadir al Carrito</button>
+
             </div>
         </div>
         <div class="sec-der">
