--- a/src/app/nota/nota.component.html
+++ b/src/app/nota/nota.component.html
@@ -1,1 +1,34 @@
-<p>nota works!</p>
+<app-navbar></app-navbar>
+<div class="container">
+    <h1 style="margin-top: 5rem;">Tu Nota</h1>
+    <div class="producto">
+        <div class="img">
+            <img src="https://images.unsplash.com/photo-1605619227865-f8af18dfeab4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="...">
+        </div>
+        <div class="info">
+            <div class="datos">
+                <p class="title-info">Producto</p>
+                <p>Nombre del Producto</p>
+            </div>
+            <div class="datos">
+                <p class="title-info">Precio Unitario</p>
+                <p>$00,00</p>
+            </div>
+            <div class="datos">
+                <p class="title-info">Precio Total</p>
+                <p>$00,00</p>
+            </div>
+            <div class="datos">
+                <p class="title-info">Cantidad</p>
+                <p>No. de Productos</p>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="total">
+        <h2>Precio Total</h2>
+        <p>$000,000</p>
+    </div>
+    <button>Confirmar Compra</button>
+</div>
+<app-footer></app-footer>
