--- a/src/app/vista-producto/vista-producto.component.css
+++ b/src/app/vista-producto/vista-producto.component.css
@@ -15,18 +15,37 @@
 }
 
 .botones{
+    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
 }
 
-button{
-    margin-top: 1rem;
-    width: 49%;
+.btn-1, .btn-2{
+    padding: 0px;
+    width: 48%;
     height: 2rem;
-    border: none;
-    background-color: #F7DDDC;
+    background-color: #e46965;
+    color: white;
+    border: 0px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
 }
 
+.btn-1 a{
+    text-decoration: none;
+    color: white;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hbtn{
+    color: white;
+}
 
 .sec-der{
     display: flex;
@@ -50,7 +69,13 @@ h1, h2{
 
 /** */
 
-button:hover{
-    color: white;
-    background-color: #c7726f;
+
+.hbtn a:hover{
+    color: #660f0c;
+    background: white;
+}
+
+.hbtn:hover{
+    color: #660f0c;
+    background: white;
 }
