--- a/src/app/nota/nota.component.html
+++ b/src/app/nota/nota.component.html
@@ -3,32 +3,28 @@
     <h1 style="margin-top: 5rem;">Tu Nota</h1>
     <div class="producto">
         <div class="img">
-            <img src="https://images.unsplash.com/photo-1605619227865-f8af18dfeab4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=881&q=80" alt="...">
+            <img src="https://scontent.fjal3-1.fna.fbcdn.net/v/t39.30808-6/237116255_169718545251196_3438560399951417157_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=kgAyOHcx_dkAX9lnZHH&_nc_ht=scontent.fjal3-1.fna&oh=00_AT8b-LckXegHHZYHa4-YpLwoA4gErGK7Da6vdyo1NM9ENA&oe=628C3965" alt="...">
         </div>
         <div class="info">
             <div class="datos">
                 <p class="title-info">Producto</p>
-                <p>Nombre del Producto</p>
+                <p>{{producto.nombre}}</p>
             </div>
             <div class="datos">
                 <p class="title-info">Precio Unitario</p>
-                <p>$00,00</p>
+                <p>${{producto.precio}}</p>
             </div>
             <div class="datos">
                 <p class="title-info">Precio Total</p>
-                <p>$00,00</p>
-            </div>
-            <div class="datos">
-                <p class="title-info">Cantidad</p>
-                <p>No. de Productos</p>
+                <p>${{producto.precio}}</p>
             </div>
         </div>
     </div>
     <hr>
     <div class="total">
         <h2>Precio Total</h2>
-        <p>$000,000</p>
+        <p>${{producto.precio}}</p>
     </div>
-    <button>Confirmar Compra</button>
+    <button (click)="compra()"><a href="" class="hbtn">Confirmar Compra</a></button>
 </div>
 <app-footer></app-footer>
